--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
     var area = d3.svg.area()
     .interpolate("monotone")
     .x(function(d) { 
-        d.date = parseDate(d['BLDG001.IntervalStart']);
+        d.date = parseDate(d['IntervalStart']);
         return x(d.date); 
       })
     .y0(height)
     .y1(function(d) { 
-        d.kWH = +d['BLDG001.HVAC.2']
+        d.kWH = +d['Temperature']
         return y(d.kWH); 
       });
 
     var area2 = d3.svg.area()
     .interpolate("monotone")
     .x(function(d) { 
-        d.date = parseDate(d['BLDG001.IntervalStart']);
+        d.date = parseDate(d['IntervalStart']);
         return x2(d.date); 
       })
     .y0(height2)
     .y1(function(d) { 
-        d.kWH = +d['BLDG001.HVAC.2']
+        d.kWH = +d['Temperature']
         return y2(d.kWH); 
       });
 
@@ -106,8 +106,7 @@
     .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
 
     var halfdaybutton = svg.append("g")
-          .on("click", function(d) {setHalfDay();});
-
+          .on("click", function(d) {setTimePeriod(halfday);});
 
     halfdaybutton.append("rect")
     .attr("class", "button")
@@ -115,17 +114,17 @@
     .attr("width", 100)
     .attr("rx", 5)
     .attr("ry", 5)
-    .attr("transform", "translate(" + margin.buttons + "," + buttonheight + ")")
+    .attr("transform", "translate(" + (margin.buttons + 5) + "," + buttonheight + ")")
 
     halfdaybutton.append("text")
-      .attr("x", margin.buttons + 5)
+      .attr("x", margin.buttons + 10)
       .attr("y", buttonheight + 25)
       .attr("dy", ".35em")
-      .text(function() {return "Set 12 Hour Interval";})
+      .attr("font-size", "20px")
+      .text(function() {return "12 Hours";})
 
-      var daybutton = svg.append("g")
-          .on("click", function(d) {setTimePeriod(day);});
-
+    var daybutton = svg.append("g")
+        .on("click", function(d) {setTimePeriod(day);});
 
     daybutton.append("rect")
     .attr("class", "button")
@@ -139,18 +138,75 @@
       .attr("x", 3 * margin.buttons + 10)
       .attr("y", buttonheight + 25)
       .attr("dy", ".35em")
-      .text(function() {return "Set 24 Hour Interval";})
+      .attr("font-size", "20px")
+      .text(function() {return "1 Day";})
 
-    d3.csv("BLDG001.csv", function(error, data) {
+    var weekbutton = svg.append("g")
+        .on("click", function(d) {setTimePeriod(week);});
+
+    weekbutton.append("rect")
+    .attr("class", "button")
+    .attr("height", 50)
+    .attr("width", 100)
+    .attr("rx", 5)
+    .attr("ry", 5)
+    .attr("transform", "translate(" + (5*margin.buttons+5) + "," + buttonheight + ")")
+
+    weekbutton.append("text")
+      .attr("x", 5 * margin.buttons + 10)
+      .attr("y", buttonheight + 25)
+      .attr("dy", ".35em")
+      .attr("font-size", "20px")
+      .text(function() {return "1 Week";})
+
+    var yearbutton = svg.append("g")
+        .on("click", function(d) {setTimePeriod(year);});
+
+    yearbutton.append("rect")
+    .attr("class", "button")
+    .attr("height", 50)
+    .attr("width", 100)
+    .attr("rx", 5)
+    .attr("ry", 5)
+    .attr("transform", "translate(" + (7*margin.buttons+5) + "," + buttonheight + ")")
+
+    yearbutton.append("text")
+      .attr("x", 7 * margin.buttons + 10)
+      .attr("y", buttonheight + 25)
+      .attr("dy", ".35em")
+      .attr("font-size", "20px")
+      .text(function() {return "1 Year";})
+
+    var threeyearbutton = svg.append("g")
+        .on("click", function(d) {setTimePeriod(threeyears);});
+
+    threeyearbutton.append("rect")
+    .attr("class", "button")
+    .attr("height", 50)
+    .attr("width", 100)
+    .attr("rx", 5)
+    .attr("ry", 5)
+    .attr("transform", "translate(" + (9*margin.buttons+5) + "," + buttonheight + ")")
+
+    threeyearbutton.append("text")
+      .attr("x", 9 * margin.buttons + 10)
+      .attr("y", buttonheight + 25)
+      .attr("dy", ".35em")
+      .attr("font-size", "20px")
+      .text(function() {return "3 Years";})
+
+
+
+    d3.csv("BLDG002_less.csv", function(error, data) {
       x.domain(d3.extent(data.map(function(d) { 
         data.forEach(function(d) {
-          d.date = parseDate(d['BLDG001.IntervalStart']);
+          d.date = parseDate(d['IntervalStart']);
         })
         return d.date; 
       })));
       y.domain([0, d3.max(data.map(function(d) { 
         data.forEach(function(d) {
-          d.kWH = +d['BLDG001.HVAC.2']
+          d.kWH = +d['Temperature']
         })
         return d.kWH; 
       }))]);
@@ -192,45 +248,6 @@
 
     function brushed() {
       x.domain(brush.empty() ? x2.domain() : brush.extent());
-      focus.select(".area").attr("d", area);
-      focus.select(".x.axis").call(xAxis);
-    }
-
-    function setHalfDay() {
-      var twelvehrms = 43200000;
-      var twelveHours = Math.abs(x.domain()[1] - twelvehrms);
-      var date = new Date(twelveHours);
-      brush.extent([twelveHours, x.domain()[1]]);
-      d3.select('.brush').transition()
-        .call(brush.extent([twelveHours, x.domain()[1]]))
-        .call(brush.event);
-      x.domain(brush.extent());
-      focus.select(".area").attr("d", area);
-      focus.select(".x.axis").call(xAxis);
-    }
-
-    function setSingleDay() {
-      var dayms = 86400000;
-      var day = Math.abs(x.domain()[1] - dayms);
-      var date = new Date(day);
-      brush.extent([day, x.domain()[1]]);
-      d3.select('.brush').transition()
-        .call(brush.extent([day, x.domain()[1]]))
-        .call(brush.event);
-      x.domain(brush.extent());
-      focus.select(".area").attr("d", area);
-      focus.select(".x.axis").call(xAxis);
-    }
-
-    function setWeek() {
-      var dayms = 86400000;
-      var day = Math.abs(x.domain()[1] - dayms);
-      var date = new Date(day);
-      brush.extent([day, x.domain()[1]]);
-      d3.select('.brush').transition()
-        .call(brush.extent([day, x.domain()[1]]))
-        .call(brush.event);
-      x.domain(brush.extent());
       focus.select(".area").attr("d", area);
       focus.select(".x.axis").call(xAxis);
     }
